[package]
name = "emmyfanctl"
version = "0.1.0"
authors = ["hc <hc@emmybeararcades.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
glob = "0.3.0"
config = "0.10.1"
serde = { version = "1.0", features = ["derive"]}
toml = "0.5.7"
